--- a/02-cfn-corrected.yaml
+++ b/02-cfn-corrected.yaml
@@ -429,8 +429,8 @@ Resources:
       ClusterName: !Ref EKSCluster
       NodeRole: !GetAtt NodeInstanceRole.Arn
       Subnets:
-        - !Ref PublicSubnet1
-        - !Ref PublicSubnet2
+        - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
       ScalingConfig:
         DesiredSize: 1
         MinSize: 1
@@ -484,34 +484,37 @@ Resources:
   # EKS Add-ons: CoreDNS, VPC CNI, and kube-proxy
 
   # CoreDNS Addon
-  CoreDNSAddon:
-    Type: AWS::EKS::Addon
-    DependsOn:
-      - EKSCluster
-    Properties:
-      AddonName: coredns
-      ClusterName: !Ref ClusterName
-      ResolveConflicts: OVERWRITE
+  #CoreDNSAddon:
+  #  Type: AWS::EKS::Addon
+  #  DependsOn:
+  #    - EKSCluster
+  #    - NodeGroup
+  #  Properties:
+  #    AddonName: coredns
+  #    ClusterName: !Ref ClusterName
+  #    ResolveConflicts: OVERWRITE
 
   # VPC CNI Addon
-  VPCCNIAddon:
-    Type: AWS::EKS::Addon
-    DependsOn:
-      - EKSCluster
-    Properties:
-      AddonName: vpc-cni
-      ClusterName: !Ref ClusterName
-      ResolveConflicts: OVERWRITE
+  #VPCCNIAddon:
+  #  Type: AWS::EKS::Addon
+  #  DependsOn:
+  #    - EKSCluster
+  #    - NodeGroup
+  #  Properties:
+  #    AddonName: vpc-cni
+  #    ClusterName: !Ref ClusterName
+  #   ResolveConflicts: OVERWRITE
 
   # kube-proxy Addon
-  KubeProxyAddon:
-    Type: AWS::EKS::Addon
-    DependsOn:
-      - EKSCluster
-    Properties:
-      AddonName: kube-proxy
-      ClusterName: !Ref ClusterName
-      ResolveConflicts: OVERWRITE
+  #KubeProxyAddon:
+  #  Type: AWS::EKS::Addon
+  #  DependsOn:
+  #    - EKSCluster
+  #    - NodeGroup
+  #  Properties:
+  #    AddonName: kube-proxy
+  #    ClusterName: !Ref ClusterName
+  #    ResolveConflicts: OVERWRITE
 
 Outputs:
   ClusterName:
